--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,25 @@ body {
     margin: 20px;
 }
 
+.navElement {
+    margin: 50px;
+}
+
 .page {
     display: flex;
     flex-direction: column;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+}
+
+.profilBox {
+    width: 300px;
+    height: 300px;
+    border: 3px solid black;
 }
