--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,5 @@
 body {
     font: 14px "Helvetica Neue", Futura, sans-serif;
-    margin: 20px;
-}
-
-.navElement {
-    margin: 50px;
 }
 
 .page {
@@ -13,15 +8,40 @@ body {
 }
 
 nav {
+    flex: 1 1 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
     height: 60px;
+    background-color: dodgerblue;
+}
+
+main {
+    margin-top: 30px;
+    justify-content: center;
+
+}
+
+.navElement {
+    flex: 0 0 15%;
+    background-color: deepskyblue;
+    margin: 2%;
+    border-radius: 15%;
+    border-color: azure;
+}
+
+.names {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .profilBox {
-    width: 300px;
-    height: 300px;
     border: 3px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profilImage {
 }
